--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ thrift = "0.15.0"
 [target.'cfg(target_os = "windows")'.dependencies]
 named_pipe = "0.4.1"
 
-[target.'cfg(target_os = "linux")'.dev-dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
 dirs = "4.0.0"
