--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "osquery-rs"
-version = "0.1.1"
+version = "0.1.2"
 homepage = "https://github.com/AbdulRhmanAlfaifi/osquery-rs"
 repository = "https://github.com/AbdulRhmanAlfaifi/osquery-rs"
 authors = ["AbdulRhman Alfaifi <aalfaifi@u0041.co>"]
@@ -13,5 +13,5 @@ thrift = "0.15.0"
 [target.'cfg(target_os = "windows")'.dependencies]
 named_pipe = "0.4.1"
 
-[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dev-dependencies]
 dirs = "4.0.0"
