--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "osquery-rs"
-version = "0.1.2"
+version = "0.1.3"
 homepage = "https://github.com/AbdulRhmanAlfaifi/osquery-rs"
 repository = "https://github.com/AbdulRhmanAlfaifi/osquery-rs"
 authors = ["AbdulRhman Alfaifi <aalfaifi@u0041.co>"]
 edition = "2018"
+description = "This crate allows you to execute osquery SQL queries using osquery Thrift API"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
